# SemaGlue

./: .gitignore  README.md  Readme_format.txt  Readme_pyproject.txt  demo.py  match_pairs.py  plot.py  plot_new.py  pyproject.toml  readme  requirements.txt  suh_matcher.yml  test.py  zzj_hier.yml  zzj_segmatcher.yml
.github/workflows/: readme.txt
extra/homography_est-main/: CMakeLists.txt
gluefactory/: settings.py  train.py
gluefactory/configs/: aliked+lightglue_homography.yaml  aliked+lightglue_megadepth.yaml  aliked+segment_lightglue-official.yaml  aliked+segment_lightglue_homography.yaml  aliked+segment_lightglue_megadepth.yaml  superpoint+dino_lightglue-official.yaml  superpoint+dino_lightglue_homography.yaml  superpoint+dino_lightglue_megadepth.yaml  superpoint+lightglue-official.yaml  superpoint+lightglue_homography.yaml  superpoint+omniglue-official.yaml  superpoint+segment_lightglue-official.yaml  superpoint+segment_lightglue_homography.yaml  superpoint+semaglue-official.yaml  superpoint+semaglue_homography.yaml  superpoint+semaglue_megadepth.yaml
gluefactory/datasets/: __init__.py  augmentations.py  base_dataset.py  homographies.py  hpatches.py  image_pairs.py  megadepth.py
gluefactory/eval/: __init__.py  eval_pipeline.py  hpatches.py  io.py  megadepth1500.py  utils.py
gluefactory/geometry/: depth.py  epipolar.py  homography.py
gluefactory/models/: __init__.py  base_model.py  cache_loader.py  segment_loader.py  two_view_pipeline.py
gluefactory/scripts/: export_dino.py  export_megadepth.py  (+1 more)
gluefactory_nonfree/: superpoint.py
models/: matching.py  semaglue_pipeline.py  superpoint.py  utils.py
(+24026 files in other folders)
