[project]
name = "gluefactory"
description = "Training and evaluation of local feature extraction and matching"
version = "0.0"
authors = [
    {name = "Philipp Lindenberger"},
    {name = "Paul-Edouard Sarlin"},
    {name = "Rémi Pautrat"},
    {name = "Iago Suárez"},
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.7",
    "torchvision>=0.8",
    "numpy",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "scipy",
    "h5py",
    "omegaconf",
    "tensorboard",
    "albumentations",
    "kornia",
    "seaborn",
    "joblib",
    "lightglue @ file:///data2/zzj/LightGlue-main",#有点问题这里
]
urls = {Repository = "https://github.com/cvg/glue-factory"}

[project.optional-dependencies]
extra = [
    "pycolmap",
    "poselib @ file:///data2/zzj/glue-factory-main/extra/PoseLib-master",
    "pytlsd @ file:///data2/zzj/glue-factory-main/extra/pytlsd-0.0.5",
    "deeplsd @ file:///data2/zzj/glue-factory-main/extra/DeepLSD-main",
    "homography_est @ file:///data2/zzj/glue-factory-main/extra/homography_est-main",
]
dev = ["black", "flake8", "isort", "parameterized"]

[tool.setuptools.packages.find]
include = ["gluefactory*"]

[tool.setuptools.package-data]
gluefactory = ["datasets/megadepth_scene_lists/*.txt", "configs/*.yaml"]

[tool.isort]
profile = "black"
extend_skip = ["gluefactory_nonfree/"]
